<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RiskRoller</string><string name="action_settings">Settings</string>
    
    <string name="num_attackers">Number of attacking units</string>
    <string name="num_defenders">Number of defending units</string>
    <string name="attacker_results">Attacker</string>
    <string name="defender_results">Defender</string>
    <string name="numbers_one">1</string>
    <string name="numbers_two">2</string>
    <string name="numbers_three">3</string>
    <string name="roll_button_text">Roll Die </string>
    <string name="results_title">Results</string>
    
    <string name="empty_string"> </string>
    

</resources>